<resources>
    <string name="app_name">Rapid</string>
    <string name="choose_your_city">Choose your City</string>
    <string name="welcome">Welcome</string>
    <string name="register">register</string>
    <string name="available_restaurants">Available Restaurants</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="available_restaurant">Available Restaurant</string>
    <string name="website">website</string>
    <string name="title">title</string>
    <string name="desc">desc</string>
    <string name="facName">facName</string>
    <string name="item">item</string>
    <string name="price">price</string>
    <string name="back"><![CDATA[<<--]]></string>
    <string name="title_activity_menu223">MenuActivity223</string>
    <string name="resto_name">Resto_Name</string>
    <string name="add_to_cart">ADD</string>
    <string name="view_cart">view cart</string>
    <string name="delivery_address">Delivery address</string>
    <string name="pay">Pay</string>
    <string name="totalp">TotalP</string>
    <string name="edit">edit</string>
    <string name="shipping_fees">shipping fees</string>
    <string name="price1">price</string>
    <string name="dot">--------------------------------------------</string>
    <string name="dot_string">----------------------------------------------------------------</string>
    <string name="delivery_info_for_your_food">DELIVERY INFO FOR YOUR FOOD</string>
    <string name="payment_amount">Payment Amount :</string>
    <string name="payment_id">Payment Id :</string>
    <string name="status">Status :</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="transaction_date">Transaction Date:</string>
    <string name="your_payment_confirmation">YOUR PAYMENT CONFIRMATION</string>
    <string name="phone">phone #</string>
    <string name="developer_name">Developer name:</string>
    <string name="about_this_app">About this app</string>
    <string name="copyright">All Rigths Reserved@2017</string>
    <string name="app_vers">App. vers:</string>
    <string name="april_2017">April,2017</string>
    <string name="credits">Credits</string>
    <string name="email">Email:</string>
    <string name="release_date">Release date</string>
    <string name="wesly_derosier">Wesly Derosier</string>
    <string name="wd245_nova_edu">wd245@nova.edu</string>
    <string name="v_01">v.01</string>
    <string name="credit_info"> Github PayPal Android SDK, PayPal Holdings, Inc.
</string>
    <string name="assistance_number">For assistance call: 954-297-8701</string>
    <string name="important_note">IMPORTANT: At this stage, your food is already ordered and getting ready to be delivered. No refund will be provided if you want to cancel 10mns after your order time. You will get charged a $6 fee if cancel within 10mns. For more info call or email our support team. Thank you!</string>
    <string name="new_order">Place a new Order</string>
    <string name="thank_you">THANK YOU</string>
    <string name="your_food_is_on_the_way">Your food is on the way!!</string>
    <string name="emailLogin">Email</string>
    <string name="login">Login</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="loginButon">Login</string>
    <string name="password">Password</string>
    <string name="reset_pwd">reset psw</string>
    <string name="email1">Email</string>
    <string name="name">Name</string>
    <string name="password1">Password</string>
    <string name="rapid_registration">Rapid Registration</string>
    <string name="register1">Register</string>
    <string name="confirm_pass1">confirm pass</string>
</resources>
