<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.nova.wd245.rapid.AboutActivity">

    <TextView
        android:text="@string/about_this_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/textView4"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/developer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/app_vers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/textView11"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/april_2017"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/textView13"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/textView18"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/wesly_derosier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/wd245_nova_edu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignStart="@+id/textView7"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="@string/v_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignStart="@+id/textView13"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/credit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        android:layout_alignBaseline="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:layout_alignStart="@+id/textView16"
        android:textColor="@android:color/background_dark" />
</RelativeLayout>
