<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.nova.wd245.rapid.RegisterActivity"
    android:background="@android:color/white">

    <TextView
        android:text="@string/rapid_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcomeTextView"
        android:textSize="30sp"
        android:textColor="@android:color/holo_orange_dark" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText"
        android:layout_marginTop="28dp"
        android:id="@+id/emailPwdEditText"
        android:hint="@string/email1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/emailPwdEditText"
        android:layout_alignEnd="@+id/emailPwdEditText"
        android:layout_marginTop="35dp"
        android:id="@+id/PassEditText"
        android:hint="@string/password1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confPassEditText"
        android:hint="@string/confirm_pass1"
        android:layout_below="@+id/PassEditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="49dp"
        android:id="@+id/nameEditText"
        android:hint="@string/name"
        android:layout_below="@+id/welcomeTextView"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:onClick="Register"
        android:textColor="@android:color/black"
        android:background="@android:color/holo_orange_dark"
        android:layout_below="@+id/confPassEditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
