<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:text="@string/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="77dp"
        android:id="@+id/itemTextView"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTextView"
        android:layout_alignStart="@+id/itemTextView"
        android:layout_marginTop="36dp"
        android:id="@+id/pricetTextView"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:text="@string/resto_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/restoNameTextView2"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_orange_dark"
        android:textAlignment="center" />

    <Button
        android:text="@string/add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pricetTextView"
        android:layout_alignParentEnd="true"
        android:id="@+id/button2"
        android:onClick="Select" />


</RelativeLayout>