<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_thank"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.nova.wd245.rapid.ThankActivity">

    <TextView
        android:text="@string/thank_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/textView22" />

    <TextView
        android:text="@string/assistance_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView23"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/textfieldEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/important_note"
        android:layout_below="@+id/textView22"
        style="@style/Widget.AppCompat.EditText" />

    <TextView
        android:text="@string/your_food_is_on_the_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView17"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/new_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newOrderButton"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView17"
        android:onClick="GoToNewOrder"/>

</RelativeLayout>
